--- a/templates/home.html
+++ b/templates/home.html
@@ -1,17 +1,15 @@
 {% extends '_base.html' %}
 {% load static %}
-
-{% block title %}Home{% endblock title %}
-{% block content %}
-    <h1>Homepage</h1>
-    <img class="bookcover" src="{% static 'images/1.jpg' %}">
-    <br>
-    {% if user.is_authenticated %}
-        Hi {{ user.email }}!
-        <p><a href="{% url 'logout' %}">Log Out</a></p>
-    {% else %}
-        <p>You are not logged in</p>
-        <a href="{% url 'login' %}">Log In</a>
-        <a href="{% url 'signup' %}">Sign Up</a>
-    {% endif %}
+    {% block title %}Home{% endblock title %}
+    {% block content %}
+        <h1>Homepage</h1>
+        <img class="bookcover" src="{% static 'images/1.jpg' %}">
+        {% if user.is_authenticated %}
+            <p>Hi {{ user.email }}!</p>
+            <p><a href="{% url 'account_logout' %}">Log Out</a></p>
+        {% else %} 
+            <p>You are not logged in</p>
+            <p><a href="{% url 'account_login' %}">Log In</a> |
+            <a href="{% url 'account_signup' %}">Sign Up</a></p>
+        {% endif %}
 {% endblock content %}
